# binary-extensions

./: CHANGELOG.md  Cargo.toml  README.md
src/: data.rs  lib.rs
tests/: golden.rs  invariants.rs  parity.rs
